# nrf54l15

./: .gitignore  CMakeLists.txt  DOCUMENTATION_INDEX.md  GEMINI.md  MEMORY_CONFIG_GUIDE.md  build.sh  pm_static.yml  prj.conf  sysbuild.cmake
.kiro/steering/: product.md  tech.md
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
cmsis_fft_q15/: README.md  example_usage.c
cmsis_fft_q15_simplified/: Makefile  README.md  extract_tables.py  main.py  pyproject.toml
cmsis_fft_q15_simplified/include/: rfft_q15.h
cmsis_fft_q15_simplified/src/: bit_reversal.c  cfft_q15.c  cfft_q15.c.backup  cfft_q15_orig_renamed.c  cfft_radix4_q15.c  rfft_init_q15.c  rfft_q15.c  twiddle_tables.c
cmsis_fft_q15_simplified/test/: README.md  compute_top20.py  requirements.txt  test_15_random_sines.py  test_api.c  test_bitrev_only.c  test_bitrev_table.c  (+21 more)
docs/: How to change nRF54L15DK sram size - Nordic Q&A - Nordic DevZone - Nordic DevZone.html  Static partition manager with Mcuboot and Sysbuild - Nordic Q&A - Nordic DevZone - Nordic DevZone.html
remote/: CMakeLists.txt  TASK12_FINAL_SUMMARY.md  prj.conf
remote/boards/: nrf54l15dk_nrf54l15_cpuflpr.overlay
remote/snippets/flpr-128k/: nrf54l15_cpuflpr.overlay  snippet.yml
remote/snippets/flpr-xip-custom/: nrf54l15_cpuflpr.overlay  snippet.yml
remote/src/: RFFT_Q15_PORTING.md  bit_reversal.c  cfft_q15.c  cfft_radix4_q15.c  fft_utils.c  fft_utils.h  ipc_pingpong.h  main.c  main_clean.c  rfft_init_q15.c  rfft_q15.c  rfft_q15_simplified.h  test_signal_8192_data.h  test_signal_data.h  twiddle_tables.c
src/: ipc_pingpong.h  main.c
(+27 files in other folders)
